# vulkan_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  slangdconfig.json  vcpkg.json
cmake/: SlangUtils.cmake
src/: App.cpp  App.hpp  main.cpp  utils.cpp  utils.hpp  vkutils.cpp  vkutils.hpp
src/assets/: shader.frag  shader.vert
src/shaders/: shader.slang
